test/sema/positive/methods2.impala
trait T {
   fn f(self: Self) -> int32;
}
impl T for bool {
   fn f(self: bool) -> int32 {
      if (self) {
      	 1
      } else {
         0
      }
   }
}
fn g() -> int32 {
   true.f() + false.f()
}
